versioned_docs/version-1.41/development/deploy/from-private-repositories.mdx
---
title: From private repositories
description: Deploy your development environments from your private Git repositories
sidebar_label: From Private Repositories
id: from-private-repositories
---

import Image from "@theme/Image";

## GitHub Private Repositories

Okteto integrates with GitHub and allows you to easily deploy any repository from any account or organization you grant permissions to. You can connect both personal repositories and those belonging to an organization in the same Okteto account.

### Grant permissions

You'll need to perform the following steps the first time you grant GitHub permissions to Okteto:

1. Log into your Okteto instance
1. Click on the "**Deploy Dev Environment**" button on the top
1. Make sure "**GitHub**" is the selected source

   <p align="center">
     <Image
       src={require("@site/static/img/private-repositories-deploy+1.17.png").default}
       alt="Deploy private repository from git"
       width="650"
     />
   </p>

1. Click on the **Configure GitHub** button, to open the authorization dialog from GitHub. GitHub will ask you to install the Okteto app in the accounts and organizations you select. Follow the instructions to grant permissions to your repositories.

   <p align="center">
     <Image
       src={require("@site/static/img/private-repositories-enable.png").default}
       alt="install Okteto"
       width="400"
     />
   </p>

1. Finally click on the **Install & Authorize** button to proceed. If you're not the administrator of the organization, GitHub will send an email notification to your administrator and wait for their authorization to complete the installation and grant you access.
   <p align="center">
     <Image
       src={
         require("@site/static/img/private-repositories-authorize.png").default
       }
       alt="install and authorize repositories"
       width="400"
     />
   </p>

Once you or your administrator grants permission, Okteto will automatically list your private and public repositories in the **Deploy** dialog. Private repositories will be identified by a "lock" icon on right side.

<p align="center">
  <Image
    src={require("@site/static/img/private-repositories-list+1.17.png").default}
    alt="list of private repositories"
    width="650"
  />
</p>

### Deploy from a Private GitHub Repository

After giving Okteto access to any of your public or private repositories, you'll be able to deploy from a GitHub repository [using an Okteto Manifest](reference/okteto-cli.mdx#deploy).

## Other Private Repositories

You can also use `SSH` authentication to deploy a private repository. To do this, use the `SSH` url of your git repository. This applies both when using the [`Deploy`](development/deploy/deploy-from-git.mdx) dialog in the Okteto UI and the [`okteto pipeline deploy`](reference/okteto-cli.mdx#deploy) command from your terminal.

<p align="center">
  <Image
    src={require("@site/static/img/private-repository+1.17.png").default}
    alt="add a private repository"
    width="676"
  />
</p>

[This document](admin/private-repositories/ssh-key.mdx) has more information on how to configure access to the private repository in your source code provider.

:::note
Using SSH with any Git provider (GitHub, GitLab, Bitbucket, Azure DevOps, or self-hosted)? Your Okteto admin can centrally manage trusted hosts via [SSH Known Hosts](admin/ssh-known-hosts.mdx). This helps avoid host key verification failures during remote deploys and submodule operations.
:::
